fix header on mobile

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,15 +8,15 @@
 
 @media (max-width: 1023px) {
 .title{
-    top: 97px;
-left: 40px;
-width: 331px;
-height: 64px;
-text-align: left;
-font: normal normal bold Lato;
-letter-spacing: 0px;
-color: #000000;
-opacity: 1;
+  top: 97px;
+  left: 40px;
+  width: 331px;
+  height: 64px;
+  text-align: left;
+  font: normal normal bold 26px/32px Lato;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1;
 }
 }
 
